fix: added a margin to top of errors for readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,7 @@ h3 {
 }
 
 .errorState {
+    margin-top: 3rem;
     font-size: 2rem;
 }
 
